database/elastic.co/manifests/upstream/gen-output/elastic-system..namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: elastic-system
  name: elastic-system
