database/elastic.co/manifests/upstream/gen-output/elastic-operator.elastic-system.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/version: 2.11.1
    control-plane: elastic-operator
  name: elastic-operator
  namespace: elastic-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: elastic-operator
  serviceName: elastic-operator
  template:
    metadata:
      annotations:
        checksum/config: 052ce1ebc5f534ea096535035722ec268fcdc842b4dd6f2ac502dff91510aaff
        co.elastic.logs/raw: '[{"type":"container","json.keys_under_root":true,"paths":["/var/log/containers/*${data.kubernetes.container.id}.log"],"processors":[{"convert":{"mode":"rename","ignore_missing":true,"fields":[{"from":"error","to":"_error"}]}},{"convert":{"mode":"rename","ignore_missing":true,"fields":[{"from":"_error","to":"error.message"}]}},{"convert":{"mode":"rename","ignore_missing":true,"fields":[{"from":"source","to":"_source"}]}},{"convert":{"mode":"rename","ignore_missing":t [...]
      labels:
        control-plane: elastic-operator
    spec:
      containers:
      - args:
        - manager
        - --config=/conf/eck.yaml
        image: docker.elastic.co/eck/eck-operator:2.11.1
        imagePullPolicy: IfNotPresent
        name: manager
        ports:
        - containerPort: 9443
          name: https-webhook
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 150Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /conf
          name: conf
          readOnly: true
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: elastic-operator
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          name: elastic-operator
        name: conf
      - name: cert
        secret:
          defaultMode: 420
          secretName: elastic-webhook-server-cert
