database/elastic.co/manifests/upstream/gen-output/elastic-webhook-server.elastic-system.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/version: 2.6.0
    control-plane: elastic-operator
  name: elastic-webhook-server
  namespace: elastic-system
spec:
  ports:
  - name: https
    port: 443
    targetPort: 9443
  selector:
    control-plane: elastic-operator
