database/elastic.co/manifests/upstream/gen-output/elastic-webhook.k8s.elastic.co..validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/version: 3.3.1
    control-plane: elastic-operator
  name: elastic-webhook.k8s.elastic.co
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-agent-k8s-elastic-co-v1alpha1-agent
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-agent-validation-v1alpha1.k8s.elastic.co
  rules:
  - apiGroups:
    - agent.k8s.elastic.co
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - agents
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-apm-k8s-elastic-co-v1-apmserver
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-apm-validation-v1.k8s.elastic.co
  rules:
  - apiGroups:
    - apm.k8s.elastic.co
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apmservers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-apm-k8s-elastic-co-v1beta1-apmserver
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-apm-validation-v1beta1.k8s.elastic.co
  rules:
  - apiGroups:
    - apm.k8s.elastic.co
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apmservers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-beat-k8s-elastic-co-v1beta1-beat
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-beat-validation-v1beta1.k8s.elastic.co
  rules:
  - apiGroups:
    - beat.k8s.elastic.co
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - beats
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-enterprisesearch-k8s-elastic-co-v1-enterprisesearch
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-ent-validation-v1.k8s.elastic.co
  rules:
  - apiGroups:
    - enterprisesearch.k8s.elastic.co
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - enterprisesearches
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-enterprisesearch-k8s-elastic-co-v1beta1-enterprisesearch
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-ent-validation-v1beta1.k8s.elastic.co
  rules:
  - apiGroups:
    - enterprisesearch.k8s.elastic.co
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - enterprisesearches
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-elasticsearch-k8s-elastic-co-v1-elasticsearch
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-es-validation-v1.k8s.elastic.co
  rules:
  - apiGroups:
    - elasticsearch.k8s.elastic.co
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - elasticsearches
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-elasticsearch-k8s-elastic-co-v1beta1-elasticsearch
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-es-validation-v1beta1.k8s.elastic.co
  rules:
  - apiGroups:
    - elasticsearch.k8s.elastic.co
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - elasticsearches
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-ems-k8s-elastic-co-v1alpha1-mapsservers
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-ems-validation-v1alpha1.k8s.elastic.co
  rules:
  - apiGroups:
    - maps.k8s.elastic.co
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - mapsservers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-kibana-k8s-elastic-co-v1-kibana
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-kb-validation-v1.k8s.elastic.co
  rules:
  - apiGroups:
    - kibana.k8s.elastic.co
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kibanas
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-kibana-k8s-elastic-co-v1beta1-kibana
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-kb-validation-v1beta1.k8s.elastic.co
  rules:
  - apiGroups:
    - kibana.k8s.elastic.co
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kibanas
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-autoscaling-k8s-elastic-co-v1alpha1-elasticsearchautoscaler
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-esa-validation-v1alpha1.k8s.elastic.co
  rules:
  - apiGroups:
    - autoscaling.k8s.elastic.co
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - elasticsearchautoscalers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-scp-k8s-elastic-co-v1alpha1-stackconfigpolicies
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-scp-validation-v1alpha1.k8s.elastic.co
  rules:
  - apiGroups:
    - stackconfigpolicy.k8s.elastic.co
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - stackconfigpolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-logstash-k8s-elastic-co-v1alpha1-logstash
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-logstash-validation-v1alpha1.k8s.elastic.co
  rules:
  - apiGroups:
    - logstash.k8s.elastic.co
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - logstashes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-autoops-k8s-elastic-co-v1alpha1-autoopsagentpolicies
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-autoops-validation-v1alpha1.k8s.elastic.co
  rules:
  - apiGroups:
    - autoops.k8s.elastic.co
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - autoopsagentpolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: elastic-webhook-server
      namespace: elastic-system
      path: /validate-epr-k8s-elastic-co-v1alpha1-elasticpackageregistry
  failurePolicy: Ignore
  matchPolicy: Exact
  name: elastic-epr-validation-v1alpha1.k8s.elastic.co
  rules:
  - apiGroups:
    - packageregistry.k8s.elastic.co
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - packageregistries
  sideEffects: None
